// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`icons/folder-icon/FolderIcon should render 64 icon when dimension is defined 1`] = `
<FolderPersonal32
  height={64}
  width={64}
/>
`;

exports[`icons/folder-icon/FolderIcon should render and collab icon when isCollab is true 1`] = `
<FolderShared32
  height={32}
  width={32}
/>
`;

exports[`icons/folder-icon/FolderIcon should render and external icon when isExternal and isCollab is true 1`] = `
<FolderExternal32
  height={32}
  width={32}
/>
`;

exports[`icons/folder-icon/FolderIcon should render and external icon when isExternal is true 1`] = `
<FolderExternal32
  height={32}
  width={32}
/>
`;

exports[`icons/folder-icon/FolderIcon should render default 32 icon when no props are defined 1`] = `
<FolderPersonal32
  height={32}
  width={32}
/>
`;

exports[`icons/folder-icon/FolderIcon should render title when title is defined 1`] = `
<FolderPersonal32
  height={32}
  title="title"
  width={32}
/>
`;
